--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets/back-black.png",
+              "src/assets/",
               {
                 "glob": "**/*",
                 "input": "public"
